[gd_scene load_steps=3 format=3 uid="uid://bcpwc3qt5j5br"]

[ext_resource type="Script" uid="uid://dn2r2gky457hq" path="res://game.gd" id="1_80nbo"]
[ext_resource type="PackedScene" uid="uid://j6i5h445cgo5" path="res://systems/console/console_selector.tscn" id="2_e2o6t"]

[node name="Game" type="Node3D"]
script = ExtResource("1_80nbo")

[node name="Scenario" type="Node3D" parent="."]

[node name="ConsoleSelector" parent="." instance=ExtResource("2_e2o6t")]

[connection signal="select_helm" from="ConsoleSelector" to="." method="add_helm_console"]
[connection signal="select_view_screen" from="ConsoleSelector" to="." method="add_view_screen_console"]
